<resources>
    <string name="app_name">MidtermApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_to_the_game">Welcome to the Game</string>
    <string name="play_game">Play Game</string>
    <string name="view_high_scores">View High Scores</string>
    <string name="player_name">Player Name:</string>
    <string name="enter_your_guess">Enter your guess:</string>
    <string name="ok">OK</string>
    <string name="no_attempts_so_far">No Attempts so far</string>
    <string name="no_high_scores_yet">No high scores yet.</string>
</resources>