<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".WelcomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <TextView
            android:id="@+id/welcome"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_margin="10dp"
            android:text="@string/welcome_to_the_game"
            android:textSize="45sp"
            android:gravity="center"/>

        <Button
            android:id="@+id/playGame"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_margin="10dp"
            android:background="@drawable/square_button"
            android:text="@string/play_game"
            android:textSize="45sp"/>
        <Button
            android:id="@+id/viewHighScores"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_margin="10dp"
            android:background="@drawable/square_button"
            android:text="@string/view_high_scores"
            android:textSize="30sp"/>






    </LinearLayout>

</layout>