<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".GameScreenFragment">

    <data>
        <variable
            name="gameScreen"
            type="com.example.midtermapp.GameViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/player_name"
                android:textSize="30sp"
                android:layout_margin="5dp"
                android:gravity="bottom"
                />
            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="30sp"
                android:layout_margin="5dp"
                android:text="@={gameScreen.name}"
                />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/enter_your_guess"
            android:textSize="35sp"
            android:layout_margin="10dp"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            >

            <ImageButton
                android:id="@+id/imageButton"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:layout_gravity="bottom"
                android:src="@android:drawable/presence_busy"
                android:clickable="true"
                android:onClick="@{() -> gameScreen.dec()}"
                android:focusable="true" />

            <EditText
                android:layout_width="0dp"
                android:layout_height="52dp"
                android:layout_weight="5"
                android:layout_gravity="bottom"
                android:inputType="number"
                android:digits="0123456789"
                android:text="@={gameScreen.guess}"
                />
            <ImageButton
                android:id="@+id/imageButton2"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:layout_gravity="bottom"
                android:src="@android:drawable/ic_input_add"
                android:clickable="true"
                android:onClick="@{() -> gameScreen.inc()}"
                android:focusable="true" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical"
            >
            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/square_button"
                android:text="@string/ok"
                android:textSize="60sp"
                android:onClick="@{() -> gameScreen.okClicked()}"
                />

        </LinearLayout>

    </LinearLayout>



</layout>